# ImageClassification

./: .gitignore  LICENSE  Makefile  README.md  README_en.md  pyproject.toml
configs/: data_aug.yaml  default.yaml  dropout.yaml  resnet.yaml
scripts/: eval.py  train.py
src/image_classification/: __init__.py  trainer.py
src/image_classification/datasets/: __init__.py  cifar_dataset.py
src/image_classification/modules/: __init__.py  benchmark_classifier.py
src/image_classification/utils/: __init__.py  autoargparse.py  logging.py  lr_scheduler.py  random_state.py  seconds2hms.py
